<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditRefueling"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/defaultColor"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/img_btn_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/defaultColor"
            android:contentDescription="@string/arrowbutton" />

        <TextView
            android:id="@+id/header"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:gravity="center_vertical"
            android:text="Tankvorgang bearbeiten"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/checkCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/defaultColor"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/fuelQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/fuelName"
        android:textColor="#009688"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/fuelQuantityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:hint="@string/some_value_for_later"
        android:inputType="numberDecimal"
        android:textSize="15sp"
        android:layout_marginStart="20dp" />

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <TextView
        android:id="@+id/fuelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/fuelPriceHeader"
        android:textColor="#009688"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/preisText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:ems="10"
        android:hint="@string/fuelPriceHeaderText"
        android:inputType="numberDecimal"
        android:textSize="15sp"
        android:layout_marginStart="20dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editInner" />

    <Button
        android:id="@+id/imagebutton"
        android:layout_marginBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/ImagineButton"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginLeft="20dp"
        android:background="@color/defaultColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="230dp"
        android:layout_height="395dp"
        android:layout_marginLeft="20dp" />

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/pager" />

</LinearLayout>