<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddWorkshop">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/defaultColor"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/defaultColor"
                android:contentDescription="@string/arrowbutton" />


            <TextView
                android:id="@+id/textViewData"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:gravity="center_vertical"
                android:text="@string/editWS"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <ImageButton
                android:id="@+id/checkCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:background="@color/defaultColor" />

        </androidx.appcompat.widget.Toolbar>


        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/anmerkung"
            android:textColor="#009688"
            android:textSize="15sp" />

        <EditText
            android:inputType="textMultiLine"
            android:id="@+id/description_input"
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:hint="@string/anmerkung"
            android:textSize="15sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="11dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_input" />

        <Button
            android:id="@+id/imagebuttonWS"
            android:layout_marginBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/ImagineButtonWS"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_marginLeft="20dp"
            android:background="@color/defaultColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/imageviewWS"
            android:layout_width="254dp"
            android:layout_height="360dp"
            android:layout_marginLeft="20dp" />

    </LinearLayout>

</RelativeLayout>